correct displaying on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     display: block;
     top: 0;
     left: 0;
-    min-width: 640px;
+    min-width: 240pt;
 }
 
 .main-wrapper {
